Update to solution 10
- Change made to answer

--- a/week-01/day-02/solution-10/index.html
+++ b/week-01/day-02/solution-10/index.html
@@ -4,6 +4,7 @@
 	<title>Problem 10</title>
 </head>
 	<body>
+	<h1>Choose size:</h1>
 		<form>
 		<div>
 			<input type="radio" name="size" value="small"/> Small
