--- a/week-01/day-02/solution-14/index.html
+++ b/week-01/day-02/solution-14/index.html
@@ -97,9 +97,10 @@
    <br>
    Floor<input type="text" name="floor" size="10" maxlength="99" required />
    <br>
-   Restaurant?<input type="checkbox" name="restaurant" value="No" />
+   Restaurant?<input type="radio" name="restaurant" value="No" checked />No
+   <input type="radio" name="restaurant" value="Yes" />Yes
    <br>
-   Select Restaurant<select required>
+   If Yes, Select Restaurant<select required>
   <option value="">None</option>
   <option value="aqua shard">Aqua Shard</option>
   <option value="oblix">Oblix</option>
@@ -117,7 +118,8 @@
    <br>
    <br>
    <input type="submit" value="click here to submit" />
-   <input type="reset" value="clear this form" /></form>
+   <input type="reset" value="clear this form" />
+  </form>
   <br>
   <br>
   <h3>A Video Introduction to the Shard</h3>
