Update to Shard document

--- a/week-01/day-02/solution-14/index.html
+++ b/week-01/day-02/solution-14/index.html
@@ -3,139 +3,153 @@
 <head>
 	<title>Problem 14</title>
 </head>
-<body>
-<h1>THE SHARD</h1>
+  <body>
+    <h1>THE SHARD</h1>
 <br>
-<h3>Introduction</h3>
-<p>
-	The Shard is the vision of Irvine Sellar. His idea was to build a diverse vibrant community, and provide multiple areas within which the public could experience the building and its magnificent views. And all of this astride one of London’s major transport hubs.
-<br>
-<br>
-<img src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/3e/dc/3edc2740-c907-4f46-bbfa-898dc5558139/the_shard_at_night.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="The Shard and the surrounding area" />
+    <h3>Introduction</h3>
+      <p>
+      	The Shard is the vision of Irvine Sellar. His idea was to build a diverse vibrant community, and provide multiple areas within which the public could experience the building and its magnificent views. And all of this astride one of London's major transport hubs.
+      </p>
 <br>
 <br>
-	Today, The Shard is a living, dynamic building, full of energy. Its sits proudly next to its stunning sister building, The News Building, now headquarters to News UK and illustrious titles and media brands: The Times, HarperCollins, Dow Jones and The Wall Street Journal. These two Renzo-designed buildings will be occupied by 12,500 people and are already establishing a new vibrant community - London Bridge Quarter.
-</p>
-<br>
-<h3>Planning the Shard</h3>
-<br>
-<p>
-	In 1998, London-based entrepreneur Irvine Sellar and his then partners decided to redevelop the 1970s-era Southwark Towers following a UK government white paper encouraging the development of tall buildings at major transport hubs. Sellar flew to Berlin in the spring of 2000 to meet the Italian architect Renzo Piano for lunch. According to Sellar, Piano spoke of his contempt for conventional tall buildings during the meal, before flipping over the restaurant's menu and sketching a spire-like sculpture emerging from the River Thames.
+      <img src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/3e/dc/3edc2740-c907-4f46-bbfa-898dc5558139/the_shard_at_night.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="The Shard and the surrounding area" />
 <br>
 <br>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/The_Shard_Layout.svg/2000px-The_Shard_Layout.svg.png" alt="Overall plan for the Shard" />
+      <p>
+      	Today, The Shard is a living, dynamic building, full of energy. Its sits proudly next to its stunning sister building, The News Building, now headquarters to News UK and illustrious titles and media brands: The Times, HarperCollins, Dow Jones and The Wall Street Journal. These two Renzo-designed buildings will be occupied by 12,500 people and are already establishing a new vibrant community - London Bridge Quarter.
+      </p>
+<br>
+    <h3>Planning the Shard</h3>
+<br>
+      <p>
+      	In 1998, London-based entrepreneur Irvine Sellar and his then partners decided to redevelop the 1970s-era Southwark Towers following a UK government white paper encouraging the development of tall buildings at major transport hubs. Sellar flew to Berlin in the spring of 2000 to meet the Italian architect Renzo Piano for lunch. According to Sellar, Piano spoke of his contempt for conventional tall buildings during the meal, before flipping over the restaurant's menu and sketching a spire-like sculpture emerging from the River Thames.
+      </p>
 <br>
 <br>
-    In July 2002, the then-Deputy Prime Minister, John Prescott, ordered a planning inquiry after the development plans for the Shard were opposed by the Commission for Architecture and the Built Environment and several heritage bodies, including the Royal Parks Foundation and English Heritage. The inquiry took place in April and May 2003, and on 19 November 2003, the Office of the Deputy Prime Minister announced that planning consent had been approved.	
-</p>
-<br>
-<h3>Funding the Shard</h3>
-<br>
-<p>
-	Sellar and his original partners CLS Holdings plc and CN Ltd (acting for the Halabi Family Trust) secured an interim funding package of £196 million in September 2006 from the Nationwide Building Society and Kaupthing Singer and Friedlander. This enabled them to pay off the costs already incurred and to buy out the Southwark Towers occupational lease from the building's tenants, PricewaterhouseCoopers. Vacant possession of the site was secured a year later, after PricewaterhouseCoopers completed the relocation of their operations.
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/The_Shard_Layout.svg/2000px-The_Shard_Layout.svg.png" alt="Overall plan for the Shard" />
 <br>
 <br>
-<img src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/61/a5/61a55674-3028-493c-8b32-fdd533cc2378/hutong-restaurant-2000x900.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="View from a restaurant in the Shard" />
+      <p>
+          In July 2002, the then-Deputy Prime Minister, John Prescott, ordered a planning inquiry after the development plans for the Shard were opposed by the Commission for Architecture and the Built Environment and several heritage bodies, including the Royal Parks Foundation and English Heritage. The inquiry took place in April and May 2003, and on 19 November 2003, the Office of the Deputy Prime Minister announced that planning consent had been approved.	
+      </p>
+<br>
+    <h3>Funding the Shard</h3>
+<br>
+      <p>
+      	Sellar and his original partners CLS Holdings plc and CN Ltd (acting for the Halabi Family Trust) secured an interim funding package of £196 million in September 2006 from the Nationwide Building Society and Kaupthing Singer and Friedlander. This enabled them to pay off the costs already incurred and to buy out the Southwark Towers occupational lease from the building's tenants, PricewaterhouseCoopers. Vacant possession of the site was secured a year later, after PricewaterhouseCoopers completed the relocation of their operations.
+      </p>
 <br>
 <br>
-    In September 2007, preparations for the demolition of Southwark Towers began. However, later that same month, turbulence in the financial markets reportedly put the Shard's construction in jeopardy, threatening to render the project an example of the Skyscraper Index.
+      <img src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/61/a5/61a55674-3028-493c-8b32-fdd533cc2378/hutong-restaurant-2000x900.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="View from a restaurant in the Shard" />
 <br>
 <br>
-    In November 2007, building contractor Mace was awarded the contract to build the Shard for a fixed price of no more than £350 million. However, this price increased to almost £435 million in October 2008.
-</p>
+      <p>
+          In September 2007, preparations for the demolition of Southwark Towers began. However, later that same month, turbulence in the financial markets reportedly put the Shard's construction in jeopardy, threatening to render the project an example of the Skyscraper Index.
+      </p>    
+      <p>
+          In November 2007, building contractor Mace was awarded the contract to build the Shard for a fixed price of no more than £350 million. However, this price increased to almost £435 million in October 2008.
+      </p>
 <br>
-<h3>Facts about the Shard</h3>
+    <h3>Facts about the Shard</h3>
 <br>
-<ul>
-	<li>The Shard has 72 habitable floors, it carries on to 87 floors at the very tip.</li>
-	<li>The Shard is serviced by 44 lifts.</li>
-	<li>The total floor area of the Shard is 110,000 m<sup>2</sup> (1,200,000 sq ft).</li>
-	<li>Construction began on the Shard in March 2009.</li>
-	<li>Construction was completed on 30 March 2012.</li>
-	<li>A fox was found on the 72nd floor towards the end of construction. The fox, which was nicknamed Romeo by staff, is believed to have survived on food left by construction workers.</li>
-</ul>
+      <ul>
+      	<li>The Shard has 72 habitable floors, it carries on to 87 floors at the very tip.</li>
+      	<li>The Shard is serviced by 44 lifts.</li>
+      	<li>The total floor area of the Shard is 110,000 m<sup>2</sup> (1,200,000 sq ft).</li>
+      	<li>Construction began on the Shard in March 2009.</li>
+      	<li>Construction was completed on 30 March 2012.</li>
+      	<li>A fox was found on the 72nd floor towards the end of construction. The fox, which was nicknamed Romeo by staff, is believed to have survived on food left by construction workers.</li>
+      </ul>
 <br>
-<h3>Just a few of the tenants at the Shard</h3>
+    <h3>Just a few of the tenants at the Shard</h3>
 <br>
-<table>
-	<tr>
-		<th>Company</th>
-		<th>Move in date (approx.)</th>
-		<th>Website</th>
-	</tr>
-	<tr>
-		<td>South Hook Gas</td>
-		<td>April 2013</td>
-		<td><a href="http://www.southhookgas.com" target="_blank">South Hook Gas</a></td>
-	</tr>
-	<tr>
-		<td>Tiffany & Co</td>
-		<td>September 2014</td>
-		<td><a href="http://www.tiffany.co.uk" target="_blank">Tiffany & Co UK</a></td>
-	</tr>
-	<tr>
-		<td>The Office Group</td>
-		<td>January 2015</td>
-		<td><a href="http://www.theofficegroup.co.uk" target="_blank">The Office Group</a></td>
-	</tr>
-	<tr>
-		<td>Warwick Business School</td>
-		<td>June 2015</td>
-		<td><a href="www.wbs.ac.uk" target="_blank">Warwick Business School</a></td>
-	</tr>
-	<tr>
-		<td>J. Wray & Nephew Gruppo Campari</td>
-		<td>August 2015</td>
-		<td><a href="www.camparigroup.com" target="_blank">Gruppo Campari</a></td>
-	</tr>
-</table>
-<form>
-   <h2>Reservation Form</h2>
-   Date<input type="text" name="date" size="15" maxlength="99" required />
-   <br>
-   Number of People<input type="text" name="number of people" value="1"  size="10" maxlength="99" />
-   <br>
-   Floor<input type="text" name="floor" size="10" maxlength="99" required />
-   <br>
-   Restaurant?<input type="radio" name="restaurant" value="No" checked />No
-   <input type="radio" name="restaurant" value="Yes" />Yes
-   <br>
-   If Yes, Select Restaurant<select required>
-  <option value="">None</option>
-  <option value="aqua shard">Aqua Shard</option>
-  <option value="oblix">Oblix</option>
-  <option value="hutong">Hutong</option>
-  <option value="ting">Ting</option>
-  </select>
-  <br>
-  <input type="submit" value="submit">
-   <br>
-   Number of Children<input type="text" name="number of children" value="0" size="5" maxlength="99" required />
-   <br>
-   Phone Number<input type="text" name="phone number" size="20" maxlength="99" optional />
-   <br>
-   Email<input type="text" name="email" size="30" maxlength="99" required />
-   <br>
-   <br>
-   <input type="submit" value="click here to submit" />
-   <input type="reset" value="clear this form" />
-  </form>
-  <br>
-  <br>
-  <h3>A Video Introduction to the Shard</h3>
-  <br>
-  <iframe width="450" height="315" src="https://www.youtube.com/embed/zXZDfhdvW1o?autoplay=0"></iframe>
-  <br>
-  <br>
-  <h3>Location of the Shard</h3>
-  <br>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.4795021394034!2d-0.0884891845605903!3d51.50441842963466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487603509f948dfb%3A0x1c6402febf9f78c8!2sThe+Shard%2C+London+SE1!5e0!3m2!1sen!2suk!4v1444779397962" width="600" height="450" style="border:0" allowfullscreen></iframe>
-  <br>
-  <h3>Further Information about the Shard</h3>
-  <ul>
-  <li><a href="http://www.telegraph.co.uk/culture/art/architecture/9826426/Is-the-Shard-really-worse-than-the-Taliban.html">Is the Shard really worse than the Taliban</a></li>
-  <li><a href="http://www.dailymail.co.uk/news/article-2169097/The-Shard-London-opening-Laser-dazzles--pay-25-ride-top.html">Laser show dazzles London</a></li>
-  <li><a href="http://www.theguardian.com/books/2015/mar/27/will-self-on-the-meaning-of-skyscrapers">Will Self on the meaning on skyscrapers</a></li>
-  </ul>
-</body>
+      <table>
+      	<tr>
+      		<th>Company</th>
+      		<th>Move in date (approx.)</th>
+      		<th>Website</th>
+      	</tr>
+      	<tr>
+      		<td>South Hook Gas</td>
+      		<td>April 2013</td>
+      		<td><a href="http://www.southhookgas.com" target="_blank">South Hook Gas</a></td>
+      	</tr>
+      	<tr>
+      		<td>Tiffany & Co</td>
+      		<td>September 2014</td>
+      		<td><a href="http://www.tiffany.co.uk" target="_blank">Tiffany & Co UK</a></td>
+      	</tr>
+      	<tr>
+      		<td>The Office Group</td>
+      		<td>January 2015</td>
+      		<td><a href="http://www.theofficegroup.co.uk" target="_blank">The Office Group</a></td>
+      	</tr>
+      	<tr>
+      		<td>Warwick Business School</td>
+      		<td>June 2015</td>
+      		<td><a href="www.wbs.ac.uk" target="_blank">Warwick Business School</a></td>
+      	</tr>
+      	<tr>
+      		<td>J. Wray & Nephew Gruppo Campari</td>
+      		<td>August 2015</td>
+      		<td><a href="www.camparigroup.com" target="_blank">Gruppo Campari</a></td>
+      	</tr>
+      </table>
+      <form>
+         <h3>Reservation Form</h3>
+           Date<input type="text" name="date" size="15" maxlength="99" required />
+           <br>
+           Number of People<input type="text" name="number of people" value="1"  size="10" maxlength="99" />
+           <br>
+           Floor<input type="text" name="floor" size="10" maxlength="99" required />
+           <br>
+           Restaurant?<input type="radio" name="restaurant" value="No" checked />No
+           <input type="radio" name="restaurant" value="Yes" />Yes
+           <br>
+           If Yes, Select Restaurant<select required>
+          <option value="" checked >None</option>
+          <option value="aqua-shard">Aqua Shard</option>
+          <option value="oblix">Oblix</option>
+          <option value="hutong">Hutong</option>
+          <option value="ting">Ting</option>
+          </select>
+          <br>
+          <input type="submit" value="submit">
+           <br>
+           Number of Children<input type="text" name="number of children" value="0" size="5" maxlength="99" required />
+           <br>
+           Phone Number<input type="text" name="phone number" size="20" maxlength="99" optional />
+           <br>
+           Email<input type="text" name="email" size="30" maxlength="99" required />
+           <br>
+           <br>
+           <input type="submit" value="click here to submit" />
+           <input type="reset" value="clear this form" />
+      </form>
+<br>
+<br>
+    <h3>A Video Introduction to the Shard</h3>
+<br>
+      <iframe width="450" height="315" src="https://www.youtube.com/embed/zXZDfhdvW1o?autoplay=0"></iframe>
+<br>
+<br>
+    <h3>Location of the Shard</h3>
+<br>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.4795021394034!2d-0.0884891845605903!3d51.50441842963466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487603509f948dfb%3A0x1c6402febf9f78c8!2sThe+Shard%2C+London+SE1!5e0!3m2!1sen!2suk!4v1444779397962" width="600" height="450" style="border:0" allowfullscreen></iframe>
+<br>
+    <h3>Further Information about the Shard</h3>
+        <ul>
+          <li><a href="http://www.telegraph.co.uk/culture/art/architecture/9826426/Is-the-Shard-really-worse-than-the-Taliban.html">Is the Shard really worse than the Taliban</a></li>
+          <li><a href="http://www.dailymail.co.uk/news/article-2169097/The-Shard-London-opening-Laser-dazzles--pay-25-ride-top.html">Laser show dazzles London</a></li>
+          <li><a href="http://www.theguardian.com/books/2015/mar/27/will-self-on-the-meaning-of-skyscrapers">Will Self on the meaning on skyscrapers</a></li>
+        </ul>
+<br>
+    <h3>Let us know what you think!</h3>
+        <form>
+            <div>
+                <textarea rows="10" cols="40" name="comments" id="comments"></textarea>
+            </div>
+          <input type="submit" value="submit">
+        </form>
+  </body>
 </html>
