Update to solution-14
-Remove poor pieces of code

--- a/week-01/day-02/solution-14/index.html
+++ b/week-01/day-02/solution-14/index.html
@@ -107,7 +107,7 @@
            <input type="radio" name="restaurant" value="Yes" />Yes
            <br>
            If Yes, Select Restaurant<select required>
-           <option value="" checked >None</option>
+           <option value="">None</option>
            <option value="aqua-shard">Aqua Shard</option>
            <option value="oblix">Oblix</option>
            <option value="hutong">Hutong</option>
@@ -118,7 +118,7 @@
            <br>
            Number of Children<input type="text" name="number of children" value="0" size="5" maxlength="99" required />
            <br>
-           Phone Number<input type="text" name="phone number" size="20" maxlength="99" optional />
+           Phone Number<input type="text" name="phone number" size="20" maxlength="99" />
            <br>
            Email<input type="text" name="email" size="30" maxlength="99" required />
            <br>
