Update to solutions
-Update to day-02/solution-14
-Solutions 1-5 entered in day-03/solutions.md

--- a/week-01/day-02/solution-14/index.html
+++ b/week-01/day-02/solution-14/index.html
@@ -95,6 +95,17 @@
       		<td><a href="www.camparigroup.com" target="_blank">Gruppo Campari</a></td>
       	</tr>
       </table>
+<br>
+    <h3>Search for a tenant in the Shard</h3>
+<br>
+      <form name="searchform" onSubmit="return dosearch();">
+        Search:<br>
+          <input name="sengines" type="radio" value="http://www.the-shard.com"> The Shard<br>
+          <input name="sengines" type="radio" value="http://www.google.com/search?q="> The Web<br>
+        For: 
+          <input type="text" name="searchterms">
+          <input type="submit" name="SearchSubmit" value="Search">
+      </form>
       <form>
          <h3>Reservation Form</h3>
            Date<input type="text" name="date" size="15" maxlength="99" required />
@@ -113,8 +124,6 @@
            <option value="hutong">Hutong</option>
            <option value="ting">Ting</option>
            </select>
-           <br>
-           <input type="submit" value="submit">
            <br>
            Number of Children<input type="text" name="number of children" value="0" size="5" maxlength="99" required />
            <br>
@@ -139,9 +148,9 @@
 <br>
     <h3>Further Information about the Shard</h3>
         <ul>
-          <li><a href="http://www.telegraph.co.uk/culture/art/architecture/9826426/Is-the-Shard-really-worse-than-the-Taliban.html">Is the Shard really worse than the Taliban</a></li>
-          <li><a href="http://www.dailymail.co.uk/news/article-2169097/The-Shard-London-opening-Laser-dazzles--pay-25-ride-top.html">Laser show dazzles London</a></li>
-          <li><a href="http://www.theguardian.com/books/2015/mar/27/will-self-on-the-meaning-of-skyscrapers">Will Self on the meaning on skyscrapers</a></li>
+          <li><a href="http://www.telegraph.co.uk/culture/art/architecture/9826426/Is-the-Shard-really-worse-than-the-Taliban.html" target="_blank">Is the Shard really worse than the Taliban</a></li>
+          <li><a href="http://www.dailymail.co.uk/news/article-2169097/The-Shard-London-opening-Laser-dazzles--pay-25-ride-top.html" target="_blank">Laser show dazzles London</a></li>
+          <li><a href="http://www.theguardian.com/books/2015/mar/27/will-self-on-the-meaning-of-skyscrapers" target="_blank">Will Self on the meaning on skyscrapers</a></li>
         </ul>
 <br>
     <h3>Let us know what you think!</h3>
