Update to solution 6

--- a/week-01/day-03/solution-06/index.html
+++ b/week-01/day-03/solution-06/index.html
@@ -1,58 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="file:///Users/benedictnagle-rose/Gits/tiy-front-end-course/week-01/day-03/solution-06/styles.css" />
   <title>Problem 14</title>
 </head>
   <body>
     <h1>THE SHARD</h1>
-<br>
     <h3>Introduction</h3>
-      <p>
+      <p id="Intro1" class="para">
         The Shard is the vision of Irvine Sellar. His idea was to build a diverse vibrant community, and provide multiple areas within which the public could experience the building and its magnificent views. And all of this astride one of London's major transport hubs.
       </p>
-<br>
-<br>
-      <img src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/3e/dc/3edc2740-c907-4f46-bbfa-898dc5558139/the_shard_at_night.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="The Shard and the surrounding area" />
-<br>
-<br>
-      <p>
+      <img id="Shard" class="image1" src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/3e/dc/3edc2740-c907-4f46-bbfa-898dc5558139/the_shard_at_night.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="The Shard and the surrounding area" />
+      <p id="Intro2" class="para">
         Today, The Shard is a living, dynamic building, full of energy. Its sits proudly next to its stunning sister building, The News Building, now headquarters to News UK and illustrious titles and media brands: The Times, HarperCollins, Dow Jones and The Wall Street Journal. These two Renzo-designed buildings will be occupied by 12,500 people and are already establishing a new vibrant community - London Bridge Quarter.
       </p>
-<br>
     <h3>Planning the Shard</h3>
-<br>
-      <p>
+      <p id="Planning1" class="para">
         In 1998, London-based entrepreneur Irvine Sellar and his then partners decided to redevelop the 1970s-era Southwark Towers following a UK government white paper encouraging the development of tall buildings at major transport hubs. Sellar flew to Berlin in the spring of 2000 to meet the Italian architect Renzo Piano for lunch. According to Sellar, Piano spoke of his contempt for conventional tall buildings during the meal, before flipping over the restaurant's menu and sketching a spire-like sculpture emerging from the River Thames.
       </p>
-<br>
-<br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/The_Shard_Layout.svg/2000px-The_Shard_Layout.svg.png" alt="Overall plan for the Shard" />
-<br>
-<br>
-      <p>
+      <img id="layout" class="image2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/The_Shard_Layout.svg/2000px-The_Shard_Layout.svg.png" alt="Overall plan for the Shard" />
+      <p id="Planning2" class="para">
           In July 2002, the then-Deputy Prime Minister, John Prescott, ordered a planning inquiry after the development plans for the Shard were opposed by the Commission for Architecture and the Built Environment and several heritage bodies, including the Royal Parks Foundation and English Heritage. The inquiry took place in April and May 2003, and on 19 November 2003, the Office of the Deputy Prime Minister announced that planning consent had been approved. 
       </p>
-<br>
     <h3>Funding the Shard</h3>
-<br>
-      <p>
+      <p id="Funding1" class="para">
         Sellar and his original partners CLS Holdings plc and CN Ltd (acting for the Halabi Family Trust) secured an interim funding package of £196 million in September 2006 from the Nationwide Building Society and Kaupthing Singer and Friedlander. This enabled them to pay off the costs already incurred and to buy out the Southwark Towers occupational lease from the building's tenants, PricewaterhouseCoopers. Vacant possession of the site was secured a year later, after PricewaterhouseCoopers completed the relocation of their operations.
       </p>
-<br>
-<br>
-      <img src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/61/a5/61a55674-3028-493c-8b32-fdd533cc2378/hutong-restaurant-2000x900.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="View from a restaurant in the Shard" />
-<br>
-<br>
-      <p>
+      <img id="view-from-shard" class="image3" src="http://teighmore-assets.s3.amazonaws.com/media/filer_public_thumbnails/filer_public/61/a5/61a55674-3028-493c-8b32-fdd533cc2378/hutong-restaurant-2000x900.jpg__2048x0_q85_crop_subsampling-2_upscale.jpg" alt="View from a restaurant in the Shard" />
+      <p id="Funding2" class="para">
           In September 2007, preparations for the demolition of Southwark Towers began. However, later that same month, turbulence in the financial markets reportedly put the Shard's construction in jeopardy, threatening to render the project an example of the Skyscraper Index.
       </p>    
-      <p>
-          In November 2007, building contractor Mace was awarded the contract to build the Shard for a fixed price of no more than £350 million. However, this price increased to almost £435 million in October 2008.
+      <p id="Funding3" class="para">
+          In November 2007, building contractor Mace was awarded the contract to build the Shard for a fixed price of no more than 350 million pounds. However, this price increased to almost 435 million pounds in October 2008.
       </p>
-<br>
     <h3>Facts about the Shard</h3>
-<br>
-      <ul>
+      <ul id="shard-facts" class="list">
         <li>The Shard has 72 habitable floors, it carries on to 87 floors at the very tip.</li>
         <li>The Shard is serviced by 44 lifts.</li>
         <li>The total floor area of the Shard is 110,000 m<sup>2</sup> (1,200,000 sq ft).</li>
@@ -60,10 +42,9 @@
         <li>Construction was completed on 30 March 2012.</li>
         <li>A fox was found on the 72nd floor towards the end of construction. The fox, which was nicknamed Romeo by staff, is believed to have survived on food left by construction workers.</li>
       </ul>
-<br>
+  <div>   
     <h3>Just a few of the tenants at the Shard</h3>
-<br>
-      <table>
+      <table id="shard-tenants" class="table">
         <tr>
           <th>Company</th>
           <th>Move in date (approx.)</th>
@@ -95,18 +76,19 @@
           <td><a href="www.camparigroup.com" target="_blank">Gruppo Campari</a></td>
         </tr>
       </table>
-<br>
-    <h3>Search for a tenant in the Shard</h3>
-<br>
-      <form name="searchform" onSubmit="return dosearch();">
-        Search:<br>
-          <input name="sengines" type="radio" value="http://www.the-shard.com"> The Shard<br>
-          <input name="sengines" type="radio" value="http://www.google.com/search?q="> The Web<br>
-        For: 
+  </div>
+  <div>
+      <form id="search-form" class="form1" name="searchform" onSubmit="return dosearch();">
+         <h3>Search for a tenant in the Shard</h3>
+          Search:<br>
+            <input name="sengines" type="radio" value="http://www.the-shard.com"> The Shard<br>
+            <input name="sengines" type="radio" value="http://www.google.com/search?q="> The Web<br>
+          For: 
           <input type="text" name="searchterms">
           <input type="submit" name="SearchSubmit" value="Search">
       </form>
-      <form>
+  </div>
+      <form id="res-form" class="form2">
          <h3>Reservation Form</h3>
            Date<input type="text" name="date" size="15" maxlength="99" required />
            <br>
@@ -135,26 +117,18 @@
            <input type="submit" value="click here to submit" />
            <input type="reset" value="clear this form" />
       </form>
-<br>
-<br>
     <h3>A Video Introduction to the Shard</h3>
-<br>
-      <iframe width="450" height="315" src="https://www.youtube.com/embed/zXZDfhdvW1o?autoplay=0"></iframe>
-<br>
-<br>
+      <iframe id="shard-video" class="video" width="450" height="315" src="https://www.youtube.com/embed/zXZDfhdvW1o?autoplay=0"></iframe>
     <h3>Location of the Shard</h3>
-<br>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.4795021394034!2d-0.0884891845605903!3d51.50441842963466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487603509f948dfb%3A0x1c6402febf9f78c8!2sThe+Shard%2C+London+SE1!5e0!3m2!1sen!2suk!4v1444779397962" width="600" height="450" style="border:0" allowfullscreen></iframe>
-<br>
+      <iframe id="shard-location" class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.4795021394034!2d-0.0884891845605903!3d51.50441842963466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487603509f948dfb%3A0x1c6402febf9f78c8!2sThe+Shard%2C+London+SE1!5e0!3m2!1sen!2suk!4v1444779397962" width="600" height="450" style="border:0" allowfullscreen></iframe>
     <h3>Further Information about the Shard</h3>
-        <ul>
+        <ul id="more-shard-info" class="news">
           <li><a href="http://www.telegraph.co.uk/culture/art/architecture/9826426/Is-the-Shard-really-worse-than-the-Taliban.html" target="_blank">Is the Shard really worse than the Taliban</a></li>
           <li><a href="http://www.dailymail.co.uk/news/article-2169097/The-Shard-London-opening-Laser-dazzles--pay-25-ride-top.html" target="_blank">Laser show dazzles London</a></li>
           <li><a href="http://www.theguardian.com/books/2015/mar/27/will-self-on-the-meaning-of-skyscrapers" target="_blank">Will Self on the meaning on skyscrapers</a></li>
         </ul>
-<br>
     <h3>Let us know what you think!</h3>
-        <form>
+        <form id="comments-form" class="comments">
             <div>
                 <textarea rows="10" cols="40" name="comments" id="comments"></textarea>
             </div>
