--- a/week-04/day-01/calendar.html
+++ b/week-04/day-01/calendar.html
@@ -83,32 +83,103 @@
     $('[class="month"]').append(fix);
 
     var newDiv = $('<div id="blankform" class="formDiv hide"></div>');
-    $('[class="calendar"]').append(newDiv);
+    $('body').append(newDiv);
     var eventForm = $('<fieldset class="eventForm"></fieldset>');
     $('[id="blankform"]').append(eventForm);
     var dayEvent = $('<legend>Add A Full Day Event</legend>');
     $('[class="eventForm"]').append(dayEvent);
     var textInput = $('<textarea rows="15" cols="40" name="comments" id="comments"></textarea>');
     $('[class="eventForm"]').append(textInput);
+    
     var saveButton = $('<button value="save" class="saveButton">save</button>');
     $('[class="eventForm"]').append(saveButton);
     var cancelButton = $('<button value="cancel" class="cancelButton">cancel</button>');
     $('[class="eventForm"]').append(cancelButton);
 
     var changeDiv = $('<div id="emptyForm" class="changeDiv hide"></div>');
-    $('[class="calendar"]').append(changeDiv);
+    $('body').append(changeDiv);
     var editForm = $('<fieldset class="editForm"></fieldset>');
     $('[id="emptyForm"]').append(editForm);
     var editDay = $('<legend>YOUR FULL DAY EVENT</legend>');
     $('[class="editForm"]').append(editDay);
     var emptyParagraph = $('<p class="emptyParagraph"></p>');
     $('[class="editForm"]').append(emptyParagraph);
-    var closeButton = $('<button value="close" class="closeButton>close</button>');
+    var closeButton = $('<button value="close" class="closeButton">close</button>');
     $('[class="editForm"]').append(closeButton);
-    var editButton = $('<button value="edit" class="editButton>edit</button>');
+    var editButton = $('<button value="edit" class="editButton">edit</button>');
     $('[class="editForm"]').append(editButton);
-    var removeButton = $('<button value="remove" class="removeButton">remove</button');
+    var removeButton = $('<button value="remove" class="removeButton">remove</button>');
     $('[class="editForm"]').append(removeButton);
+
+    var days = ['day1', 'day2', 'day3', 'day4', 'day5', 'day6', 'day7', 'day8', 'day9', 'day10', 'day11', 'day12', 'day13', 'day14', 'day15', 'day16', 'day17', 'day18', 'day19', 'day20', 'day21', 'day22', 'day23', 'day24', 'day25', 'day26', 'day27', 'day28', 'day29', 'day30'];
+    var newObject = {};
+    var key;
+    var prevId = 0;
+    var prevTargetElement = 0;
+    var targetObject = {};
+    var eventFlow = false;
+
+    for (i = 0; i < days.length; i++) {
+        key = days[i];
+        newObject[key] = "";
+        targetObject[key] = "key";
+    }
+
+    $('[class="month"]').on('click', '.day', function (event) {
+          var targetElement = event.target;
+          event.stopPropagation();
+          event.preventDefault();
+          $('[id="blankform"]').addClass('show').removeClass('hide');
+          var getId = $(targetElement).attr('id');
+          var textValue = newObject[getId];
+          $('[id="comments"]').val(textValue);
+          targetObject[getId] = getId;
+          prevId = getId;
+          prevTargetElement = targetElement;
+    });
+
+    $('[class="month"]').on('click', '.highlight', function (event) {
+          var targetElement = event.target;
+          event.stopPropagation();
+          event.preventDefault();
+          $('[id="emptyForm"]').addClass('show').removeClass('hide');
+          $('[id="blankform"]').addClass('hide').removeClass('show');
+          var getId = $(targetElement).attr('id');
+          var textValue = newObject[getId];
+          $('[class="emptyParagraph"]').text(textValue);
+          prevId = targetObject[getId];
+    });
+
+    $('[value="save"]').on('click', function (event) {
+          event.preventDefault();
+          newObject[prevId] = $('[id="comments"]').val();
+          $('[id="' + prevId + '"]').addClass('highlight');
+          $('[id="blankform"]').addClass('hide').removeClass('show');
+    });
+
+    $('[value="cancel"]').on('click', function (event) {
+          event.preventDefault();
+          $('[id="blankform"]').addClass('hide').removeClass('show');
+    });
+
+    $('[value="close"]').on('click', function (event) {
+          event.preventDefault();
+          $('[id="emptyForm"]').addClass('hide').removeClass('show');
+    });
+
+    $('[value="edit"]').on('click', function (event) {
+          event.preventDefault();
+          $('[id="blankform"]').addClass('show').removeClass('hide');
+          $('[id="emptyForm"]').addClass('hide').removeClass('show');
+    });
+
+    $('[value="remove"]').on('click', function (event) {
+          event.preventDefault();
+          newObject[targetObject[prevId]] = "";
+          $('[id="' + prevId + '"]').removeClass('highlight');
+          $('[id="emptyForm"]').addClass('hide').removeClass('show');
+    });
+
 
   });
 </script>
