--- a/week-04/day-01/calendar.html
+++ b/week-04/day-01/calendar.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>jQuery Calendar</title>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </head>
 <body>
 <script>
@@ -12,173 +13,205 @@
 
     var link = $('<link rel="stylesheet" href="file:///Users/benedictnagle-rose/Gits/tiy-front-end-course/week-04/day-01/calendar.css">');
     $('head').append(link);
+    var link2 = $('<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">');
+    $('head').append(link2);
+    var link3 = $('<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">');
+    $('head').append(link3);
 
-    var calendar = $('<div class="calendar"></div>');
-    $('body').append(calendar);
-    var month = $('<div class="month"></div>');
-    $('[class="calendar"]').append(month);
-    var head1 = $('<h1>November 2015</h1>');
-    $('[class="month"]').append(head1);
-    var span1 = $('<span id="day1" class="day">1</span>');
-    $('[class="month"]').append(span1);
-    var span2 = $('<span id="day2" class="day">2</span>');
-    $('[class="month"]').append(span2);
-    var span3 = $('<span id="day3" class="day">3</span>');
-    $('[class="month"]').append(span3);
-    var span4 = $('<span id="day4" class="day">4</span>');
-    $('[class="month"]').append(span4);
-    var span5 = $('<span id="day5" class="day">5</span>');
-    $('[class="month"]').append(span5);
-    var span6 = $('<span id="day6" class="day">6</span>');
-    $('[class="month"]').append(span6);
-    var span7 = $('<span id="day7" class="day">7</span>');
-    $('[class="month"]').append(span7);
-    var span8 = $('<span id="day8" class="day">8</span>');
-    $('[class="month"]').append(span8);
-    var span9 = $('<span id="day9" class="day">9</span>');
-    $('[class="month"]').append(span9);
-    var span10 = $('<span id="day10" class="day">10</span>');
-    $('[class="month"]').append(span10);
-    var span11 = $('<span id="day11" class="day">11</span>');
-    $('[class="month"]').append(span11);
-    var span12 = $('<span id="day12" class="day">12</span>');
-    $('[class="month"]').append(span12);
-    var span13 = $('<span id="day13" class="day">13</span>');
-    $('[class="month"]').append(span13);
-    var span14 = $('<span id="day14" class="day">14</span>');
-    $('[class="month"]').append(span14);
-    var span15 = $('<span id="day15" class="day">15</span>');
-    $('[class="month"]').append(span15);
-    var span16 = $('<span id="day16" class="day">16</span>');
-    $('[class="month"]').append(span16);
-    var span17 = $('<span id="day17" class="day">17</span>');
-    $('[class="month"]').append(span17);
-    var span18 = $('<span id="day18" class="day">18</span>');
-    $('[class="month"]').append(span18);
-    var span19 = $('<span id="day19" class="day">19</span>');
-    $('[class="month"]').append(span19);
-    var span20 = $('<span id="day20" class="day">20</span>');
-    $('[class="month"]').append(span20);
-    var span21 = $('<span id="day21" class="day">21</span>');
-    $('[class="month"]').append(span21);
-    var span22 = $('<span id="day22" class="day">22</span>');
-    $('[class="month"]').append(span22);
-    var span23 = $('<span id="day23" class="day">23</span>');
-    $('[class="month"]').append(span23);
-    var span24 = $('<span id="day24" class="day">24</span>');
-    $('[class="month"]').append(span24);
-    var span25 = $('<span id="day25" class="day">25</span>');
-    $('[class="month"]').append(span25);
-    var span26 = $('<span id="day26" class="day">26</span>');
-    $('[class="month"]').append(span26);
-    var span27 = $('<span id="day27" class="day">27</span>');
-    $('[class="month"]').append(span27);
-    var span28 = $('<span id="day28" class="day">28</span>');
-    $('[class="month"]').append(span28);
-    var span29 = $('<span id="day29" class="day">29</span>');
-    $('[class="month"]').append(span29);
-    var span30 = $('<span id="day30" class="day">30</span>');
-    $('[class="month"]').append(span30);
-    var fix = $('<div class"clearfix"></div>');
-    $('[class="month"]').append(fix);
+    // var calendar = $('<div class="calendar"></div>');
+    // $('body').append(calendar);
+    // var month = $('<div class="month"></div>');
+    // $('[class="calendar"]').append(month);
+    // var head1 = $('<h1>November 2015</h1>');
+    // $('[class="month"]').append(head1);
+    // var span1 = $('<span id="day1" class="day">1</span>');
+    // $('[class="month"]').append(span1);
+    // var span2 = $('<span id="day2" class="day">2</span>');
+    // $('[class="month"]').append(span2);
+    // var span3 = $('<span id="day3" class="day">3</span>');
+    // $('[class="month"]').append(span3);
+    // var span4 = $('<span id="day4" class="day">4</span>');
+    // $('[class="month"]').append(span4);
+    // var span5 = $('<span id="day5" class="day">5</span>');
+    // $('[class="month"]').append(span5);
+    // var span6 = $('<span id="day6" class="day">6</span>');
+    // $('[class="month"]').append(span6);
+    // var span7 = $('<span id="day7" class="day">7</span>');
+    // $('[class="month"]').append(span7);
+    // var span8 = $('<span id="day8" class="day">8</span>');
+    // $('[class="month"]').append(span8);
+    // var span9 = $('<span id="day9" class="day">9</span>');
+    // $('[class="month"]').append(span9);
+    // var span10 = $('<span id="day10" class="day">10</span>');
+    // $('[class="month"]').append(span10);
+    // var span11 = $('<span id="day11" class="day">11</span>');
+    // $('[class="month"]').append(span11);
+    // var span12 = $('<span id="day12" class="day">12</span>');
+    // $('[class="month"]').append(span12);
+    // var span13 = $('<span id="day13" class="day">13</span>');
+    // $('[class="month"]').append(span13);
+    // var span14 = $('<span id="day14" class="day">14</span>');
+    // $('[class="month"]').append(span14);
+    // var span15 = $('<span id="day15" class="day">15</span>');
+    // $('[class="month"]').append(span15);
+    // var span16 = $('<span id="day16" class="day">16</span>');
+    // $('[class="month"]').append(span16);
+    // var span17 = $('<span id="day17" class="day">17</span>');
+    // $('[class="month"]').append(span17);
+    // var span18 = $('<span id="day18" class="day">18</span>');
+    // $('[class="month"]').append(span18);
+    // var span19 = $('<span id="day19" class="day">19</span>');
+    // $('[class="month"]').append(span19);
+    // var span20 = $('<span id="day20" class="day">20</span>');
+    // $('[class="month"]').append(span20);
+    // var span21 = $('<span id="day21" class="day">21</span>');
+    // $('[class="month"]').append(span21);
+    // var span22 = $('<span id="day22" class="day">22</span>');
+    // $('[class="month"]').append(span22);
+    // var span23 = $('<span id="day23" class="day">23</span>');
+    // $('[class="month"]').append(span23);
+    // var span24 = $('<span id="day24" class="day">24</span>');
+    // $('[class="month"]').append(span24);
+    // var span25 = $('<span id="day25" class="day">25</span>');
+    // $('[class="month"]').append(span25);
+    // var span26 = $('<span id="day26" class="day">26</span>');
+    // $('[class="month"]').append(span26);
+    // var span27 = $('<span id="day27" class="day">27</span>');
+    // $('[class="month"]').append(span27);
+    // var span28 = $('<span id="day28" class="day">28</span>');
+    // $('[class="month"]').append(span28);
+    // var span29 = $('<span id="day29" class="day">29</span>');
+    // $('[class="month"]').append(span29);
+    // var span30 = $('<span id="day30" class="day">30</span>');
+    // $('[class="month"]').append(span30);
+    // var fix = $('<div class="clearfix"></div>');
+    // $('[class="month"]').append(fix);
 
-    var newDiv = $('<div id="blankform" class="formDiv hide"></div>');
-    $('body').append(newDiv);
-    var eventForm = $('<fieldset class="eventForm"></fieldset>');
-    $('[id="blankform"]').append(eventForm);
-    var dayEvent = $('<legend>Add A Full Day Event</legend>');
-    $('[class="eventForm"]').append(dayEvent);
-    var textInput = $('<textarea rows="15" cols="40" name="comments" id="comments"></textarea>');
-    $('[class="eventForm"]').append(textInput);
-    
-    var saveButton = $('<button value="save" class="saveButton">save</button>');
-    $('[class="eventForm"]').append(saveButton);
-    var cancelButton = $('<button value="cancel" class="cancelButton">cancel</button>');
-    $('[class="eventForm"]').append(cancelButton);
+    // var newDiv = $('<div id="blankform" class="formDiv hide"></div>');
+    // $('body').append(newDiv);
+    // var eventForm = $('<fieldset class="eventForm"></fieldset>');
+    // $('[id="blankform"]').append(eventForm);
+    // var dayEvent = $('<legend>Add A Full Day Event</legend>');
+    // $('[class="eventForm"]').append(dayEvent);
+    // var textInput = $('<textarea rows="15" cols="40" name="comments" id="comments"></textarea>');
+    // $('[class="eventForm"]').append(textInput);
+    // var saveButton = $('<button value="save" class="saveButton">save</button>');
+    // $('[class="eventForm"]').append(saveButton);
+    // var cancelButton = $('<button value="cancel" class="cancelButton">cancel</button>');
+    // $('[class="eventForm"]').append(cancelButton);
 
-    var changeDiv = $('<div id="emptyForm" class="changeDiv hide"></div>');
-    $('body').append(changeDiv);
-    var editForm = $('<fieldset class="editForm"></fieldset>');
-    $('[id="emptyForm"]').append(editForm);
-    var editDay = $('<legend>YOUR FULL DAY EVENT</legend>');
-    $('[class="editForm"]').append(editDay);
-    var emptyParagraph = $('<p class="emptyParagraph"></p>');
-    $('[class="editForm"]').append(emptyParagraph);
-    var closeButton = $('<button value="close" class="closeButton">close</button>');
-    $('[class="editForm"]').append(closeButton);
-    var editButton = $('<button value="edit" class="editButton">edit</button>');
-    $('[class="editForm"]').append(editButton);
-    var removeButton = $('<button value="remove" class="removeButton">remove</button>');
-    $('[class="editForm"]').append(removeButton);
+    // var changeDiv = $('<div id="emptyForm" class="changeDiv hide"></div>');
+    // $('body').append(changeDiv);
+    // var editForm = $('<fieldset class="editForm"></fieldset>');
+    // $('[id="emptyForm"]').append(editForm);
+    // var editDay = $('<legend>YOUR FULL DAY EVENT</legend>');
+    // $('[class="editForm"]').append(editDay);
+    // var emptyParagraph = $('<p class="emptyParagraph"></p>');
+    // $('[class="editForm"]').append(emptyParagraph);
+    // var closeButton = $('<button value="close" class="closeButton">close</button>');
+    // $('[class="editForm"]').append(closeButton);
+    // var editButton = $('<button value="edit" class="editButton">edit</button>');
+    // $('[class="editForm"]').append(editButton);
+    // var removeButton = $('<button value="remove" class="removeButton">remove</button>');
+    // $('[class="editForm"]').append(removeButton);
 
-    var days = ['day1', 'day2', 'day3', 'day4', 'day5', 'day6', 'day7', 'day8', 'day9', 'day10', 'day11', 'day12', 'day13', 'day14', 'day15', 'day16', 'day17', 'day18', 'day19', 'day20', 'day21', 'day22', 'day23', 'day24', 'day25', 'day26', 'day27', 'day28', 'day29', 'day30'];
-    var newObject = {};
-    var key;
-    var prevId = 0;
-    var prevTargetElement = 0;
-    var targetObject = {};
-    var eventFlow = false;
 
-    for (i = 0; i < days.length; i++) {
-        key = days[i];
-        newObject[key] = "";
-        targetObject[key] = "key";
-    }
-
-    $('[class="month"]').on('click', '.day', function (event) {
-          var targetElement = event.target;
-          event.stopPropagation();
-          event.preventDefault();
-          $('[id="blankform"]').addClass('show').removeClass('hide');
-          var getId = $(targetElement).attr('id');
-          var textValue = newObject[getId];
-          $('[id="comments"]').val(textValue);
-          targetObject[getId] = getId;
-          prevId = getId;
-          prevTargetElement = targetElement;
+    var showEvents = $('<div class="container"></div>');
+    $('body').append(showEvents);
+    var viewRow = $('<div class="row"></div>');
+    $('[class="container"]').append(viewRow);
+    var title = $('<div class="col-xs-12 col-sm-12 col-md-12"></div>');
+    $('[class="row"]').append(title);
+    var para = $('<p><label for="amount">November</label><input id="amount"></p>');
+    $('[class="col-xs-12 col-sm-12 col-md-12"]').append(para);
+    var range = $('<div id="slider-range"></div>');
+    $('[class="col-xs-12 col-sm-12 col-md-12"]').append(range);
+    var slider = $(function() {
+      $("#slider-range").slider({
+        range: true,
+        min: 1,
+        max: 30,
+        values: [1,30],
+        slide: function(event, ui) {
+          $("#amount").val(ui.values[0] + "th - " + ui.values[1] + "th");
+        }
+      });
+      $("#amount").val($("#slider-range").slider("values", 0) + "th - " + $("#slider-range").slider("values", 1) + "th");
     });
 
-    $('[class="month"]').on('click', '.highlight', function (event) {
-          var targetElement = event.target;
-          event.stopPropagation();
-          event.preventDefault();
-          $('[id="emptyForm"]').addClass('show').removeClass('hide');
-          $('[id="blankform"]').addClass('hide').removeClass('show');
-          var getId = $(targetElement).attr('id');
-          var textValue = newObject[getId];
-          $('[class="emptyParagraph"]').text(textValue);
-          prevId = targetObject[getId];
-    });
 
-    $('[value="save"]').on('click', function (event) {
-          event.preventDefault();
-          newObject[prevId] = $('[id="comments"]').val();
-          $('[id="' + prevId + '"]').addClass('highlight');
-          $('[id="blankform"]').addClass('hide').removeClass('show');
-    });
 
-    $('[value="cancel"]').on('click', function (event) {
-          event.preventDefault();
-          $('[id="blankform"]').addClass('hide').removeClass('show');
-    });
+    var changeView = $('<button value="change" class="changeView">Change View</button>');
+    $('body').append(changeView);
 
-    $('[value="close"]').on('click', function (event) {
-          event.preventDefault();
-          $('[id="emptyForm"]').addClass('hide').removeClass('show');
-    });
+    // var days = ['day1', 'day2', 'day3', 'day4', 'day5', 'day6', 'day7', 'day8', 'day9', 'day10', 'day11', 'day12', 'day13', 'day14', 'day15', 'day16', 'day17', 'day18', 'day19', 'day20', 'day21', 'day22', 'day23', 'day24', 'day25', 'day26', 'day27', 'day28', 'day29', 'day30'];
+    // var newObject = {};
+    // var key;
+    // var prevId = 0;
+    // var prevTargetElement = 0;
+    // var targetObject = {};
+    // var eventFlow = false;
 
-    $('[value="edit"]').on('click', function (event) {
-          event.preventDefault();
-          $('[id="blankform"]').addClass('show').removeClass('hide');
-          $('[id="emptyForm"]').addClass('hide').removeClass('show');
-    });
+    // for (i = 0; i < days.length; i++) {
+    //     key = days[i];
+    //     newObject[key] = "";
+    //     targetObject[key] = "key";
+    // }
 
-    $('[value="remove"]').on('click', function (event) {
-          event.preventDefault();
-          newObject[targetObject[prevId]] = "";
-          $('[id="' + prevId + '"]').removeClass('highlight');
-          $('[id="emptyForm"]').addClass('hide').removeClass('show');
-    });
+    // $('[class="month"]').on('click', '.day', function (event) {
+    //       var targetElement = event.target;
+    //       event.stopPropagation();
+    //       event.preventDefault();
+    //       $('[id="blankform"]').addClass('show').removeClass('hide');
+    //       var getId = $(targetElement).attr('id');
+    //       var textValue = newObject[getId];
+    //       $('[id="comments"]').val(textValue);
+    //       targetObject[getId] = getId;
+    //       prevId = getId;
+    //       prevTargetElement = targetElement;
+    // });
+
+    // $('[class="month"]').on('click', '.highlight', function (event) {
+    //       var targetElement = event.target;
+    //       event.stopPropagation();
+    //       event.preventDefault();
+    //       $('[id="emptyForm"]').addClass('show').removeClass('hide');
+    //       $('[id="blankform"]').addClass('hide').removeClass('show');
+    //       var getId = $(targetElement).attr('id');
+    //       var textValue = newObject[getId];
+    //       $('[class="emptyParagraph"]').text(textValue);
+    //       prevId = targetObject[getId];
+    // });
+
+    // $('[value="save"]').on('click', function (event) {
+    //       event.preventDefault();
+    //       newObject[prevId] = $('[id="comments"]').val();
+    //       $('[id="' + prevId + '"]').addClass('highlight');
+    //       $('[id="blankform"]').addClass('hide').removeClass('show');
+    // });
+
+    // $('[value="cancel"]').on('click', function (event) {
+    //       event.preventDefault();
+    //       $('[id="blankform"]').addClass('hide').removeClass('show');
+    // });
+
+    // $('[value="close"]').on('click', function (event) {
+    //       event.preventDefault();
+    //       $('[id="emptyForm"]').addClass('hide').removeClass('show');
+    // });
+
+    // $('[value="edit"]').on('click', function (event) {
+    //       event.preventDefault();
+    //       $('[id="blankform"]').addClass('show').removeClass('hide');
+    //       $('[id="emptyForm"]').addClass('hide').removeClass('show');
+    // });
+
+    // $('[value="remove"]').on('click', function (event) {
+    //       event.preventDefault();
+    //       newObject[targetObject[prevId]] = "";
+    //       $('[id="' + prevId + '"]').removeClass('highlight');
+    //       $('[id="emptyForm"]').addClass('hide').removeClass('show');
+    // });
 
 
   });
