Update to calendar

--- a/week-04/day-01/calendar.html
+++ b/week-04/day-01/calendar.html
@@ -158,7 +158,7 @@
     //     targetObject[key] = "key";
     // }
 
-    // $('[class="month"]').on('click', '.day', function (event) {
+    // $('[class="month"]').on('click', '.day', function daySelector(event) {
     //       var targetElement = event.target;
     //       event.stopPropagation();
     //       event.preventDefault();
@@ -171,7 +171,7 @@
     //       prevTargetElement = targetElement;
     // });
 
-    // $('[class="month"]').on('click', '.highlight', function (event) {
+    // $('[class="month"]').on('click', '.highlight', function dayHighlight(event) {
     //       var targetElement = event.target;
     //       event.stopPropagation();
     //       event.preventDefault();
@@ -183,30 +183,30 @@
     //       prevId = targetObject[getId];
     // });
 
-    // $('[value="save"]').on('click', function (event) {
+    // $('[value="save"]').on('click', function save(event) {
     //       event.preventDefault();
     //       newObject[prevId] = $('[id="comments"]').val();
     //       $('[id="' + prevId + '"]').addClass('highlight');
     //       $('[id="blankform"]').addClass('hide').removeClass('show');
     // });
 
-    // $('[value="cancel"]').on('click', function (event) {
+    // $('[value="cancel"]').on('click', function cancel(event) {
     //       event.preventDefault();
     //       $('[id="blankform"]').addClass('hide').removeClass('show');
     // });
 
-    // $('[value="close"]').on('click', function (event) {
+    // $('[value="close"]').on('click', function close(event) {
     //       event.preventDefault();
     //       $('[id="emptyForm"]').addClass('hide').removeClass('show');
     // });
 
-    // $('[value="edit"]').on('click', function (event) {
+    // $('[value="edit"]').on('click', function edit(event) {
     //       event.preventDefault();
     //       $('[id="blankform"]').addClass('show').removeClass('hide');
     //       $('[id="emptyForm"]').addClass('hide').removeClass('show');
     // });
 
-    // $('[value="remove"]').on('click', function (event) {
+    // $('[value="remove"]').on('click', function remove(event) {
     //       event.preventDefault();
     //       newObject[targetObject[prevId]] = "";
     //       $('[id="' + prevId + '"]').removeClass('highlight');
